raspberry/base/echo-http/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-http
  # annotations:
  #   linkerd.io/inject: enabled
  labels:
    app: echo-http
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-http
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: echo-http
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 20
---
